--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="images/myimage.jpeg" alt="Profile Image">
+<!--                     <img src="images/myimage.jpeg" alt="Profile Image"> -->
                 </div>
                 <div class="about-text">
                     <h3>Back-End Developer & Aspiring Data Analyst</h3>
